[tool.poetry]
name = "ab-flasher"
version = "0.1.7"
description = ""
authors = ["Jono Hill <jonathan@hillnz.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
