[tool.poetry]
name = "ab-flasher"
version = "0.1.12"
description = ""
authors = ["Jono Hill <jonathan@hillnz.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
aiohttp = "^3.6.2"
aiofiles = "^0.7.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
humanize = "^3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
